# p4containerflow-tofino2

./: .gitignore  .gitmodules  DOC.md  LICENSE  Makefile  README.md  Vagrantfile  load_balance.p4  load_kernel_modules.sh  p4studio-profile.yaml  p4studio-tofino2.yaml  test.py  topology.md
controller/: abstract_switch_controller.py  bf_switch_controller.py  bmv2_switch_controller.py  controller.py  controller_config.json  controller_config_hw.json  cr.sh  internal_types.py  node_manager.py  pyproject.toml  run.sh  utils.py
diagrams/: generate.py  requirements.txt
docs/: cpu-port-internet-access.md  experiment_report.md  technical_report.md  topology.md
experiments/: .gitignore  Makefile  build.sh  build_hw.sh  clean.sh  clean_hw.sh  config.env  config_hw.env  config_hw.env.example  cr.sh  cr_hw.sh  go.mod  go.sum  run_experiment.sh
load_balancer/: t2na_load_balancer.conf  t2na_load_balancer.model.conf  t2na_load_balancer.p4  t2na_load_balancer_custom.py  tna_load_balancer.conf
profiles/: tofino-hardware.yaml  tofino2-hardware.yaml  tofino2-model.yaml
scripts/: edit_files_img.py  install_criu.sh  install_crun.sh  patch_cmake.sh  (+2 more)
test/: TESTING.md  conftest.py  cr_tcp_test.sh  hardware_controller_test.py  hardware_test.py  pyproject.toml  run.sh  t2na_load_balancer_controller.py  t2na_load_balancer_dataplane.py  test_hardware_controller.py  test_hardware_dataplane.py  test_model_controller.py  test_model_dataplane.py
test/hardware/: conftest.py  pyproject.toml  run.sh  test_controller.py  test_dataplane.py
test/model/: test_controller.py  test_dataplane.py
(+55 files in other folders)
